tests/parser/tests/cases/should_fail/unclose_type_args/case.hash
k<t := do_something();
