tests/parser/tests/cases/should_fail/unclose_type_args/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:3
1 |   k<t := do_something();
  |     ^ here
  = note: Expected an expression, however received a `:`.
